Changed joke structure to use setup/punchline. Updated UI design

--- a/jokedisplay/src/main/res/values/strings.xml
+++ b/jokedisplay/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">jokedisplay</string>
-    <string name="title_activity_joke_display">JokeDisplayActivity</string>
+    <string name="title_activity_joke_display">Here is a Joke</string>
+
+    <string name="get_joke_button_text">Get Another Joke</string>
+    <string name="button_get_joke_punchline">MORE...</string>
 </resources>
